package com.keskin.users.domain.model;

public enum Role {
    USER,
    EMPLOYEE,
    ADMIN
}
